# MNIST_Neural_Network

./: CMakeLists.txt  README.md  build_run.sh  main_bench.cpp  main_bench.cu  nn_cpu_bench.cpp  nn_gpu_bench.cu  project.15315.node03.out  project.19418.node03.out
include/: def.h  dense_nn.h  gemm.h  gemv.h  gpu_dense_nn.cuh  gpu_sparse_nn.cuh  gpu_utils.h  kernels.cuh  sparse_nn.h  spmm.h  spmv.h  utils.h
script/: dense_nn.py  plot.py  sparsify_weight.py
src/: dense_nn.cpp  gemm.cpp  gemv.cpp  gpu_dense_nn.cu  gpu_sparse_nn.cu  kernels.cu  sparse_nn.cpp  spmm.cpp  spmv.cpp  utils.cpp
test/: CMakeLists.txt  denseNN_test.cpp  gemm_test.cpp  gemv_test.cpp  sparseNN_test.cpp  spmm_test.cpp  spmv_test.cpp
